Moved to controllers

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  p Welcome to Mimosa
+  p Welcome to Mimosa - This is on the Jade template page
   if optimize
-    p Optimized mode.  You are getting a single RequireJS optimized JavaScript file which includes all the page dependencies.
+    p Optimized mode.  You are getting a single RequireJS optimized JavaScript file which includes all the page dependencies. - This is on the Jade template page
