--- a/assets/javascripts/app/template/application.hbs
+++ b/assets/javascripts/app/template/application.hbs
@@ -1,3 +1,10 @@
+<header>
+    <h1>This is the header</h1>
+    <h2>{{year}}
+</header>
 <div>
     {{outlet}}
 </div>
+<footer>
+    <p>This is the footer</p>
+</footer>
